--- a/index.html
+++ b/index.html
@@ -153,9 +153,8 @@
         <div class="w-layout-grid grid-17"><a href="#about" class="dropdown-link-9 w-dropdown-link">ABOUT</a><a
                 href="#links" class="dropdown-link-4 w-dropdown-link">LINKS</a><a href="#chart"
                                                                                   class="dropdown-link-3 w-dropdown-link active-link">CHART</a><a
-                href="#story" class="dropdown-link-8 w-dropdown-link">STORY</a><a href="/pfp" target="_blank"
-                                                                                  class="dropdown-link-6 w-dropdown-link">PFP</a><a
-                href="https://pump.fun/coin/6M5ps4CbbstYPTEvmGjGQ9XqxUFzfxhU5pz87uJDpump"
+                href="#story" class="dropdown-link-8 w-dropdown-link">STORY</a><a
+                href="https://pump.fun/coin/CigYyKQK26ysT78mm5M1BzWnW4FWHt6BL4r9hw2Kpump"
                 class="dropdown-link-7 w-dropdown-link">BUY NOW</a></div>
     </nav>
 </div>
