--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
       class=" w-mod-js">
 <head>
     <meta charset="utf-8">
-    <title>$KUCH</title>
+    <title>$KUSH</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="css/sayoo.webflow.a70698d11.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -134,7 +134,7 @@
         <div class="preload_window">
             <div class="w-layout-grid grid-31">
                 <div id="w-node-_46004b7a-eac5-e7d4-efb8-780a18dd852a-2ecf887c" class="text-block-34">Wanna Get Your
-                    KUCH Up?<br></div>
+                    KUSH Up?<br></div>
                 <div id="grid32" class="w-layout-grid grid-32 w-node-_4724f5ec-ea13-f04e-ad34-67a935d3af55-2ecf887c">
                     <div class="div-block-3"><a id="YES_preload" href="#" class="button-2 w-button">Yeah Baby!</a></div>
                     <div id="w-node-_32264f6b-5c79-c519-e2c8-43d82fbab006-2ecf887c" class="div-block-4"><a
@@ -154,7 +154,7 @@
                 href="#links" class="dropdown-link-4 w-dropdown-link">LINKS</a><a href="#chart"
                                                                                   class="dropdown-link-3 w-dropdown-link active-link">CHART</a><a
                 href="#story" class="dropdown-link-8 w-dropdown-link">STORY</a><a
-                href="https://pump.fun/coin/CigYyKQK26ysT78mm5M1BzWnW4FWHt6BL4r9hw2Kpump"
+                href="https://pump.fun/coin/CYChE9FeuQKCyMWVKcJqZDkkYfb2gUDCDcBngZWppump"
                 class="dropdown-link-7 w-dropdown-link">BUY NOW</a></div>
     </nav>
 </div>
@@ -169,7 +169,7 @@
             <div id="w-node-c25a3ee4-58ec-ce77-7a88-50f64ed28dac-2ecf887c"
                  data-w-id="c25a3ee4-58ec-ce77-7a88-50f64ed28dac" style="opacity:0" class="textwrap1">
                 <div id="w-node-fa4f7f03-b59a-e0a3-1ec2-12092ff4292b-2ecf887c" class="w-layout-grid grid-14">
-                    <div class="text-block-11">Who is $KUCH?</div>
+                    <div class="text-block-11">Who is $KUSH?</div>
                     <div id="w-node-_443cc9cf-666b-fcfb-ae31-f93d0cf16138-2ecf887c" class="slider_wrap">
                         <div data-delay="4000" data-animation="cross" class="slider w-slider" data-autoplay="false"
                              data-easing="ease" data-hide-arrows="false" data-disable-swipe="false"
@@ -177,8 +177,8 @@
                             <div class="mask w-slider-mask">
                                 <div class="slide w-slide">
                                     <div class="div-block-8">
-                                        <div class="text-block-38">Meet KUCH, the ultimate meme cat and shitcoin degen,
-                                            always chilling on the moon and knows exactly how to catch those pumps. KUCH's
+                                        <div class="text-block-38">Meet KUSH, the ultimate meme cat and shitcoin degen,
+                                            always chilling on the moon and knows exactly how to catch those pumps. KUSH's
                                             favorite hobby? Rolling fat joints and talking about which shields are
                                             popping off today. He’s always in hodl mode because dips don’t scare him—he
                                             knows the pump is coming.
@@ -187,10 +187,10 @@
                                 </div>
                                 <div class="w-slide">
                                     <div class="div-block-9">
-                                        <div class="text-block-39">With his half-lidded eyes and signature stare, KUCH
+                                        <div class="text-block-39">With his half-lidded eyes and signature stare, KUSH
                                             is the cat who’s already in the next moonshot while the rest of the
                                             community waits for his signal.When he’s not trolling rockets on Twitter,
-                                            KUCH is deep-diving into crypto memes, shitcoin content, and hunting for new
+                                            KUSH is deep-diving into crypto memes, shitcoin content, and hunting for new
                                             gems. His stash of green magic (aka catnip) is always close by, especially
                                             when the market’s bullish.
                                         </div>
@@ -198,11 +198,11 @@
                                 </div>
                                 <div class="w-slide">
                                     <div class="div-block-10">
-                                        <div class="text-block-40">KUCH’s go-to line? When liquidity’s solid, you don’t
+                                        <div class="text-block-40">KUSH’s go-to line? When liquidity’s solid, you don’t
                                             worry. He’s that cat who’s always in the green and only drops alpha to his
-                                            closest bros. Understanding KUCH means you’re rolling with the winners—his
+                                            closest bros. Understanding KUSH means you’re rolling with the winners—his
                                             motto is, More joints, less FUD. He’s the meme king who stays chill, never
-                                            dumps the vibe, and is always ready to help you get to the moon.<br><br>KUCH
+                                            dumps the vibe, and is always ready to help you get to the moon.<br><br>KUSH
                                             MONEY BABY
                                         </div>
                                     </div>
@@ -242,7 +242,7 @@
             <div id="w-node-ca23aa1b-85ec-2d60-038c-83281e39d8f9-2ecf887c"
                  data-w-id="ca23aa1b-85ec-2d60-038c-83281e39d8f9" style="opacity:0" class="imgwrap2">
                 <div class="div-block-5">
-                    <div class="text-block-44">$KUCH IS ALWAYS HIGH</div>
+                    <div class="text-block-44">$KUSH IS ALWAYS HIGH</div>
                     <img src="images/67374ac64aec1779e5553aa8_Smart.png" loading="lazy"
                          id="w-node-_900159ae-6322-afef-36d7-0af666d7b894-2ecf887c"
                          sizes="(max-width: 479px) 90vw, 45vw" alt=""
@@ -253,10 +253,10 @@
                  data-w-id="1094bfb7-071f-fc6c-ffbd-8f845b55f97d" style="opacity:0" class="linkswrap1">
                 <div class="w-layout-grid grid-19">
                     <div id="w-node-d623921a-01c7-847a-780f-ac2ef527fd94-2ecf887c" class="div-block"><a
-                            id="w-node-ca29a05f-7244-bde1-a2d9-d3260288b805-2ecf887c" href="https://x.com/KuchCatSol"
+                            id="w-node-ca29a05f-7244-bde1-a2d9-d3260288b805-2ecf887c" href="https://x.com/CatSolKush"
                             class="link-block-3 w-inline-block"><img src="images/673cac1202cf328abae6b72d_X4.png"
                                                                      loading="lazy" alt="" class="image-12"></a><a
-                            id="w-node-_5a6b2db9-ac81-0a85-9e02-cd9b9eaef6a9-2ecf887c" href="https://t.me/KUCHCatSol"
+                            id="w-node-_5a6b2db9-ac81-0a85-9e02-cd9b9eaef6a9-2ecf887c" href="https://t.me/CatSolKush"
                             class="link-block-6 w-inline-block"><img src="images/6737255a1162209f4ec0b8b8_5.png"
                                                                      loading="lazy" alt="" class="image-13"></a></div>
                     <a id="w-node-_39648693-b0f7-47f6-c867-2e8524d9fcbf-2ecf887c"
@@ -266,7 +266,7 @@
                               alt="" class="image-17"></a>
                     <div id="w-node-f0bb43b5-49b7-3310-ecd6-c35a5504c68b-2ecf887c" class="div-block-2"><a
                             id="w-node-_9199de70-988f-5575-35f7-6dd81067b4e7-2ecf887c"
-                            href="https://pump.fun/CigYyKQK26ysT78mm5M1BzWnW4FWHt6BL4r9hw2Kpump"
+                            href="https://pump.fun/CYChE9FeuQKCyMWVKcJqZDkkYfb2gUDCDcBngZWppump"
                             class="link-block-4 w-inline-block"><img src="images/pump.png" loading="lazy" alt=""
                                                                      class="image-15"></a></div>
                     <div id="w-node-b0d5de1b-6bb3-c747-4f02-9ae626444b79-2ecf887c" class="text-block-13">LINKS</div>
@@ -290,16 +290,16 @@
 
                     <div style="margin-top:100px" id="w-node-b2921747-c2b9-9c1b-1189-211059b17ea4-2ecf887c" class="ca_wrap"><a
                             fs-copyclip-message="COPIED!" fs-copyclip-element="click"
-                            fs-copyclip-text="CigYyKQK26ysT78mm5M1BzWnW4FWHt6BL4r9hw2Kpump"
+                            fs-copyclip-text="CYChE9FeuQKCyMWVKcJqZDkkYfb2gUDCDcBngZWppump"
                             id="w-node-_48a91c9f-041e-9207-f9c7-8631414d5617-2ecf887c"
                             data-w-id="48a91c9f-041e-9207-f9c7-8631414d5617" href="#" class="button w-button">CA:
-                            CigYyKQK26ysT78mm5M1BzWnW4FWHt6BL4r9hw2Kpump</a></div>
+                            CYChE9FeuQKCyMWVKcJqZDkkYfb2gUDCDcBngZWppump</a></div>
                 </div>
             </div>
             <div id="w-node-_828cc754-694b-c8f1-93f4-e02ec79e2abd-2ecf887c"
                  data-w-id="828cc754-694b-c8f1-93f4-e02ec79e2abd" style="opacity:0" class="imgwrap3">
                 <div class="div-block-6">
-                    <div class="text-block-43">$KUCH LOVES GREEN CANDLES</div>
+                    <div class="text-block-43">$KUSH LOVES GREEN CANDLES</div>
                     <img src="images/dealer.png" loading="lazy"
                          id="w-node-_6e85e63c-f4a6-2513-2241-e7f87263e958-2ecf887c"
                          sizes="(max-width: 479px) 80vw, (max-width: 1919px) 34vw, 600px" alt=""
