--- a/index.html
+++ b/index.html
@@ -153,8 +153,7 @@
         <div class="w-layout-grid grid-17"><a href="#about" class="dropdown-link-9 w-dropdown-link">ABOUT</a><a
                 href="#links" class="dropdown-link-4 w-dropdown-link">LINKS</a><a href="#chart"
                                                                                   class="dropdown-link-3 w-dropdown-link active-link">CHART</a><a
-                href="#story" class="dropdown-link-8 w-dropdown-link">STORY</a><a href="/pfp" target="_blank"
-                                                                                  class="dropdown-link-6 w-dropdown-link">PFP</a><a
+                href="#story" class="dropdown-link-8 w-dropdown-link">STORY</a><a
                 href="https://pump.fun/coin/CRVgsXrYFHnDqFJPmdd8wFWe6qwctVejNAjwgNzFpump"
                 class="dropdown-link-7 w-dropdown-link">BUY NOW</a></div>
     </nav>
@@ -257,7 +256,7 @@
                             id="w-node-ca29a05f-7244-bde1-a2d9-d3260288b805-2ecf887c" href="https://x.com/KeshyCatSol"
                             class="link-block-3 w-inline-block"><img src="images/673cac1202cf328abae6b72d_X4.png"
                                                                      loading="lazy" alt="" class="image-12"></a><a
-                            id="w-node-_5a6b2db9-ac81-0a85-9e02-cd9b9eaef6a9-2ecf887c" href="https://t.me/CatSolKush"
+                            id="w-node-_5a6b2db9-ac81-0a85-9e02-cd9b9eaef6a9-2ecf887c" href="https://t.me/KeshyCatSol"
                             class="link-block-6 w-inline-block"><img src="images/6737255a1162209f4ec0b8b8_5.png"
                                                                      loading="lazy" alt="" class="image-13"></a></div>
                     <a id="w-node-_39648693-b0f7-47f6-c867-2e8524d9fcbf-2ecf887c"
